--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@
   .cta-container {
     display: flex;
     justify-content: center; 
-    align-items: center;
+    align-items: center; 
     height: 100%; 
   }
   
@@ -106,10 +106,10 @@
     transform: scale(1.1);
   }
   
-  /* Image Slider */
+
   .slider {
     position: relative;
-    margin: 0 auto; 
+    margin: 0 auto;
     overflow: hidden;
   }
   
@@ -123,6 +123,7 @@
     display: flex;
     justify-content: center; 
     height: 100%; 
+  }
   
   .slide {
     width: 90%; 
@@ -269,11 +270,11 @@
     margin: 20px auto; 
     border-radius: 12px; 
     display: inline-block;
-    width: 70%; 
+    width: 70%;
     height: auto; 
     text-align: center;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5); 
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px); 
     color: #f5f5f5; 
   }
   .testimonial img {
@@ -376,10 +377,10 @@
   }
   
   
-/* Footer Styling */
+
 footer {
   background: linear-gradient(45deg, #2c3e50, #34495e, #2c3e50);
-  background-size: 400% 400%; 
+  background-size: 400% 400%;
   color: #ecf0f1;
   text-align: center;
   padding: 20px;
@@ -421,6 +422,6 @@ footer {
       color: inherit;      
   }
   .portfolio-item-link {
-    text-decoration: none;
-    color: inherit;      
+    text-decoration: none; 
+    color: inherit;       
   }
